# DreadGOAD

./: .ansible-lint  .editorconfig  .gitignore  .goreleaser.yaml  .pre-commit-config.yaml  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  Taskfile.yaml  dev-inventory  dev-inventory.example  dreadgoad.yaml  globalsettings.ini  goad.py  goad.sh  goad_docker.sh  inventory  noansible_requirements.yml  playbooks.yml  provision-with-ssm.sh  pyproject.toml  requirements.txt  requirements.yml  requirements_311.yml  staging-inventory  staging-inventory.example
.github/: PULL_REQUEST_TEMPLATE.md  labeler.yaml  labels.yaml  renovate.json5
.hooks/: docsible-hook.sh  gen-arch-diagram.py  go-no-replacement.sh  go-vet.sh  prettier.sh  requirements.txt  run-go-tests.sh  terratest.sh
ansible/: ad-acl.yml  ad-child_domain.yml  ad-data.yml  ad-enroll_linux.yml  ad-gmsa.yml  ad-members.yml  ad-parent_domain.yml  ad-relations.yml  ad-servers.yml  ad-trusts.yml  ad.yml  adcs.yml  ansible.cfg  build.yml  data.yml  dhcp.yml  diagnose-dc01.yml  disable_vagrant.yml  enable_vagrant.yml  fix_dns.yml  fix_trust.yml  galaxy.yml  glpi.yml  interfaces.yml  keepass.yml  klink.yml  laps.yml  localusers.yml  main.yml  onlyusers.yml  reboot.yml  requirements.yml  requirements_311.yml  sccm-client.yml  sccm-config.yml  sccm-install.yml  (+6 more)
scoreboard/: README.md  agent_prompt.md  answer_key.json  cli.py  generate_answer_key.py  pyproject.toml  run.sh  transport.py  tui.py  verify.py
scoreboard/transport/: base.py  local.py  ssm.py
scoreboard/tui/: app.py
(+1442 files in other folders)
